examples/test/testpolicy19723.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19723
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key11: value18
      key7: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value24
          key30: value7
      podSelector:
        matchLabels:
          key9: value0
          key29: value32
